add+fix: major bug fixes and file modularity
v0.0.5